--- a/templates/otp.html
+++ b/templates/otp.html
@@ -43,7 +43,7 @@
 
         <li ><a href="http://127.0.0.1:8000/aboutus/">ABOUT</a></li>
         
-        <li ><a href="http://127.0.0.1:8000/blogs/">BLOG</a></li>
+        <li ><a href="#">BLOG</a></li>
         <li ><a href="http://127.0.0.1:8000/faqs/">FAQS</a></li>
          
     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTACT <span class="caret"></span></a>
@@ -69,71 +69,36 @@
    </div> 
  </div>
 </div>
+<div class="container" style="margin-bottom:5%;">
+ <div class="row">
+   <div class="col-xs-6 col-xs-offset-3">
+     <h3 style="border-bottom:1px solid;padding-top:5%;margin-top:3%;padding-bottom:1%;">Enter Your OTP </h3>
+     <h5 style = "color: red;">{{message}}</h5>
+	 
 
-<div class="container">
- <div class="col-xs-6 col-xs-offset-3">
 
 
-
- <form action="https://test.payu.in/_payment/" method="POST">
-  
-     <div class="form-group">
-  	  <label>Full Name</label><br>
-  	  <input type="text" class="form-control" name="user" value="{{user}}">
-     </div>
-     <div class="form-group">
-  	  <label>Address</label><br>
-  	  <input type="text" class="form-control" name="address" value="{{address}}">
-     </div>
-     <div class="form-group">
-  	  <label>Landmark</label><br>
-  	  <input type="text" class="form-control" name="landmark">
-     </div>
-     <div class="form-group">
-  	  <label>City</label><br>
-  	  <input type="text" class="form-control" name="city">
-     </div>
-     <div class="row">
-     <div class="form-group col-md-6">
-  	  <label>State</label><br>
-  	  <input type="text" class="form-control" name="state">
-     </div>
-     <div class="form-group col-md-6">
-  	  <label>Pin Code</label><br>
-  	  <input type="text" class="form-control" name="pincode">
-     </div>
-     </div>
-     <div class="row">
-     <div class="form-group col-md-6">
-  	  <label>Email</label><br>
-  	  <input type="email" class="form-control" name="email" value="{{email}}">
-     </div>
-     <div class="form-group col-md-6">
-  	  <label>Contact</label><br>
-  	  <input type="text" class="form-control" name="phone" value="{{phone}}">
-     </div>
-      <input type="hidden" class="form-control" name="txnid" value="{{txnid}}">
-      <input type="hidden" class="form-control" name="amount" value="{{amount}}">
-      <input type="hidden" class="form-control" name="productinfo" value="{{productinfo}}">
-      <input type="hidden" class="form-control" name="surl" value="{{surl}}">
-      <input type="hidden" class="form-control" name="furl" value="{{furl}}">
-      <input type="hidden" class="form-control" name="firstname" value="{{user}}">
-      <input type="hidden" class="form-control" name="key" value="{{key}}">
-      <input type="hidden" class="form-control" name="salt" value="{{salt}}">
-      <input type="hidden" class="form-control" name="hash" value="{{hash_o}}">
-
-      <button type="submit" class="btn btn-default">Submit</button>
-     </div>
-
-   </form>
+	 <form action="http://127.0.0.1:8000/otp/" method="POST">
+	   <div class="form-group" style="padding-top:5%;">
+	     <label>One Time Password</label><br>
+	     <input type="text" class="form-control" name="OTP" placeholder="4-digit code" required >
+       <input type="hidden" name="email" value={{email}} hidden>
+	   </div>
+	   <button type="submit" class="btn btn-default" >Reset Password</button><br><br>
+	   
+	   
 
 
 
 
+	 </form>
+	 
    </div>
-</div>
-
-<div class="container-fluid footer" style="margin-top:3%;">
+   
+   </div>
+ 
+ </div>
+<div class="container-fluid footer">
 
      <div class="row">
 	 
@@ -155,8 +120,10 @@
       <div class="col-md-3"></div>
 	  
     
-  </div>
-  </div>
+     </div>
+</div>
+
 
 
 </body>
+</html>
