--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,14 +17,14 @@ html,body{
 	margin:0;
 	
 	top:0px;
-	padding-top:4%;
-	padding-bottom:4%;
+	padding-top:2%;
+	padding-bottom:02%;
 	width: 100%;
 	z-index:1;
-	background-color:#ffffff;
+	background-color:#1EBB3F;
 }
 .nav-container{
-	background-color:#ffffff;
+	background-color:#1EBB3F;
 }
 .navbar.navbar-default{	
 
@@ -39,15 +39,16 @@ html,body{
 }
 #myNavbar>li>a{
 	font-family: 'Comfortaa', cursive;
-	color:#46662d;
+	color:#ffffff;
+	font-size: 24px;
 	
 }
 .nav{
 	font-size:20px;
 }
 .glyphicon{
-	font-size:25px;
-	color:#46662d;
+	font-size:30px;
+	color:#ffffff;
 }
 .carousel {
 	
@@ -67,7 +68,7 @@ html,body{
      
      
       margin: 0;
-      height:480px;
+      height:530px;
   }
   .slider{
 	  color:#46662d;
