--- a/templates/blog.html
+++ b/templates/blog.html
@@ -11,10 +11,12 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-
+<link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css" />
 <link href="/static/css/main.css" rel="stylesheet" type="text/css" >
 </head>
 <body>
+<!-- Navigation Bar starts -->
+
 <div class="page-header">
   <div class="container-fluid">
     <div class="row">
@@ -34,23 +36,25 @@
       </button>
       
        </div>
-       <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
+       <div class="collapse navbar-collapse" >
+      <ul class="nav navbar-nav" id="myNavbar">
         <li  ><a href="http://127.0.0.1:8000/">HOME</a></li>
-        <li ><a href="#">PRODUCTS</a></li> 
-        <li ><a href="#">BLOG</a></li>
-        <li ><a href="http://127.0.0.1:8000/faqs/">FAQS</a></li> 
-        <li ><a href="#">{{status}}</a></li>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact <span class="caret"></span></a>
+    
+
+        <li ><a href="http://127.0.0.1:8000/aboutus/">ABOUT</a></li>
+        
+        <li ><a href="http://127.0.0.1:8000/blogs/">BLOG</a></li>
+        <li ><a href="http://127.0.0.1:8000/faqs/">FAQS</a></li>
+         
+    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTACT <span class="caret"></span></a>
           <ul class="dropdown-menu">
        <li><a href="contact_cust.html"> Customer</a></li>
        <li><a href="contact_dealer.html">Dealer</a></li>
        <li><a href="contact_seller.html"> Seller</a></li>
       </ul>
-     
+     <li ><a href="http://127.0.0.1:8000/login/">{{status}}</a></li> 
     
     </li>
-         
       </ul>
       </div>
       
@@ -59,27 +63,27 @@
      </div> 
      <div class="col-md-2 col-sm-2">
        <ul class="nav navbar-nav ">
-        <li><a href="#"><span class="glyphicon glyphicon-user" onclick="document.getElementById('id01').style.display='block'"></span> </a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
-
+                <li><a href="http://127.0.0.1:8000/cart/"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
       </ul>
      </div>
    </div> 
  </div>
 </div>
 
+<!-- Navigation Bar Ends -->
+
 
 <!-- BLOG PAGE BEGINS -->
 
-<div class="container">
+<div class="container" style="margin-top:4%;">
  <div class="panel-group" id="accordion">
         
         <!-- BLOG 1 STARTS -->
         <!-- <div class="panel panel-default">
             <div class="panel-heading">
-                <img class="panel-title" src="/static/img/banner_h112.jpg"></img>
+                <img class="panel-title blog-img" src="blog2.jpg"></img>
 				<h3> blog 1 </h3>
-                <h5 >February 27,2017 <button type="button" class="accordion-toggle collapsed btn btn-success btn-lg" data-toggle="collapse" data-parent="#accordion" href="#collapse1"style="margin-left:70%;">Read</button></h5>   
+                <h5 >February 27,2017 <button type="button" class="accordion-toggle collapsed btn btn-success btn-lg" data-toggle="collapse" data-parent="#accordion" href="#collapse1"style="margin-left:80%;">Read</button></h5>   
                 
             </div>
             <div id="collapse1" class="panel-collapse collapse ">
@@ -89,14 +93,14 @@
                 </div>
             </div>
 			
-        </div>   -->
+        </div>   
         <!-- BLOG 1 ENDS -->
           <!-- BLOG 2 STARTS -->
-		        <!-- <div class="panel panel-default">
+		         <!-- <div class="panel panel-default">
             <div class="panel-heading">
-                <img class="panel-title" src="/static/img/banner_h112.jpg"></img>
+                <img class="panel-title blog-img" src="blog1.jpg"></img>
                  <h3> blog 2    </h3>
-				 <h5> February 27, 2017 <button type="button" class="accordion-toggle collapsed btn btn-success btn-lg" data-toggle="collapse" data-parent="#accordion" href="#collapse2"style="margin-left:70%;">Read</button>  
+				 <h5> February 27, 2017 <button type="button" class="accordion-toggle collapsed btn btn-success btn-lg" data-toggle="collapse" data-parent="#accordion" href="#collapse2"style="margin-left:80%;">Read</button>  
 				 </h5>
             </div>
             <div id="collapse2" class="panel-collapse collapse ">
@@ -104,9 +108,9 @@
                     Account registration at <strong>PrepBootstrap</strong> is only required if you will be selling or buying themes. 
                     This ensures a valid communication channel for all parties involved in any transactions. 
                 </div>
-            </div>
+            </div> -->
 			
-        </div>  -->
+        <!-- </div> -->   
         <!-- BLOG 2 ENDS -->
 
         {{data|safe|linebreaks}}
