--- a/templates/login.html
+++ b/templates/login.html
@@ -4,18 +4,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-<!-- jQuery library -->
+<!-- <link rel="stylesheet" href="static/css/bootstrap.min.css">
+ --><!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-
+<link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css" />
 <link href="/static/css/main.css" rel="stylesheet" type="text/css" >
-
 </head>
 <body>
+<!-- Navigation Bar starts -->
 
 <div class="page-header">
   <div class="container-fluid">
@@ -36,16 +36,25 @@
       </button>
       
        </div>
-       <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li  ><a href="#">HOME</a></li>
-		
+       <div class="collapse navbar-collapse" >
+      <ul class="nav navbar-nav" id="myNavbar">
+        <li  ><a href="http://127.0.0.1:8000/">HOME</a></li>
+    
 
-        <li ><a href="#">PRODUCTS</a></li>
-        <li ><a href="#">EVENTS</a></li> 
+        <li ><a href="http://127.0.0.1:8000/aboutus/">ABOUT</a></li>
+        
         <li ><a href="#">BLOG</a></li>
-        <li ><a href="#">FAQS</a></li> 
+        <li ><a href="http://127.0.0.1:8000/faqs/">FAQS</a></li>
          
+    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTACT <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+       <li><a href="contact_cust.html"> Customer</a></li>
+       <li><a href="contact_dealer.html">Dealer</a></li>
+       <li><a href="contact_seller.html"> Seller</a></li>
+      </ul>
+     <li ><a href="http://127.0.0.1:8000/login/">{{status}}</a></li> 
+    
+    </li>
       </ul>
       </div>
       
@@ -54,8 +63,7 @@
      </div> 
      <div class="col-md-2 col-sm-2">
        <ul class="nav navbar-nav ">
-        <li><a href="#"><span class="glyphicon glyphicon-user" onclick="document.getElementById('id01').style.display='block'"></span> </a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+                <li><a href="http://127.0.0.1:8000/cart/"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
       </ul>
      </div>
    </div> 
@@ -64,20 +72,23 @@
 <div class="container" style="margin-bottom:5%;">
  <div class="row">
    <div class="col-xs-6 col-xs-offset-3">
-     <h3 style="border-bottom:1px solid;padding:5%;margin:5%;">Login</h3>
+     <h3 style="border-bottom:1px solid;padding-top:5%;margin-top:5%;padding-bottom:3%;margin-bottom:3%;">Login</h3>
 	 
 	 <form action="http://127.0.0.1:8000/signin/" method="POST">
 	   <div class="form-group">
 	     <label>Username</label><br>
-	     <input type="text" class="form-control" name="username" required >
+	     <input type="text" class="form-control" name="username" placeholder="Name" required >
 	   </div>
 	   <div class="form-group">
 	     <label>Password</label><br>
-	     <input type="password" class="form-control" name="password" required >
+	     <input type="password" class="form-control" name="password" placeholder="Password" required >
 	   </div>
-	   <button type="submit" class="btn btn-default" >Login</button><br><br>
+	   <button type="submit" class="btn btn-default" >Login</button>
+     <a href="http://127.0.0.1:8000/signup/">
+     <button type="button" href="http://127.0.0.1:8000/signup/" class="btn btn-default" style="margin-left: 1.5%">Sign Up</button><br><br>
+     </a>
 	   <div class="forgot password">
-	    <a href="#" >Forgot Password</a>
+	    <a href="http://127.0.0.1:8000/forgot_password/" >Forgot Password</a>
 	   </div>
 	   
 	   
