--- a/templates/product.html
+++ b/templates/product.html
@@ -1,13 +1,5 @@
 <!DOCTYPE html>
 <html>
-<!-- <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-<link href="static/css/main.css" rel="stylesheet" type="text/css" >
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-</head> -->
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Latest compiled and minified CSS -->
@@ -47,7 +39,7 @@
        </div>
        <div class="collapse navbar-collapse" >
       <ul class="nav navbar-nav" id="myNavbar">
-        <li  ><a href="#">HOME</a></li>
+        <li  ><a href="http://127.0.0.1:8000/">HOME</a></li>
     
 
         <li ><a href="#">ABOUT</a></li>
@@ -72,7 +64,7 @@
      </div> 
      <div class="col-md-2 col-sm-2">
        <ul class="nav navbar-nav ">
-                <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+                <li><a href="http://127.0.0.1:8000/cart/"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
       </ul>
      </div>
    </div> 
@@ -95,11 +87,11 @@
     <h3 class="item-title" style="font-size:35px;"> {{prod_name|safe}}</h3>
    </div>
 
-     <div class="description" style="border-bottom:1px dashed;">
-        <p>
+     <div class="description" style="border-bottom:1px dashed;word-wrap: break-word;">
+        <p class="text-justify" style="font-size:16px;width:300px;white-space:normal;">
         {{desc|safe|linebreaks}}
       </p>
-       <!-- <p class="text-left" style="font-size:16px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+      <!--  <p class="text-left" style="font-size:16px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
         minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
         commodo consequat.
@@ -113,9 +105,15 @@
         commodo consequat.</p>  -->
      </div>
    <div class="product-price" style="margin-top:2%;margin-bottom:5%;border-bottom:1px dashed;">
-     <div class="prod" style="margin-top:5%;margin-bottom:5%;border-top:1px solid;border-bottom:1px solid; width:20%;">
-        <p style="font-size:15px;"> {{price}}</p>
+     <div class="prod" style="margin-top:5%;margin-bottom:2%;border-top:1px solid;border-bottom:1px solid; width:20%;">
+        <!-- <p style="font-size:19px;"> {{price}}</p> -->
+        <p> 
+            <span style="text-decoration:line-through;color:grey;margin:2%;font-size:19px">₹{{price}}</span> 
+            <span style="color:red;margin-left:0.1%;margin-right:4%;font-size:14px">{{offer}}% off</span> 
+            <span style="font-weight:bold; font-size:19px;margin:2%;">₹{{amount}}</span> 
+         </p>
      </div>
+     <span style="font-weight:bold; font-size:15px; color:#46662D">The Product is {{avail}}</span> 
    </div>
    <div style="width:15%;">
      <form class="cart" action="/addcart/{{prod_id}}/" method="POST">
