--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,11 +11,13 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-
+<link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css" />
 <link href="/static/css/main.css" rel="stylesheet" type="text/css" >
 
 </head>
 <body>
+<!-- Navigation Bar starts -->
+
 <div class="page-header">
   <div class="container-fluid">
     <div class="row">
@@ -35,13 +37,25 @@
       </button>
       
        </div>
-       <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li  ><a href="http://127.0.0.1:8000/">HOME</a></li>
-		    <li ><a href="#">PRODUCTS</a></li>
+       <div class="collapse navbar-collapse" >
+      <ul class="nav navbar-nav" id="myNavbar">
+        <li  ><a href="#">HOME</a></li>
+    
+
+        <li ><a href="#">ABOUT</a></li>
+        
         <li ><a href="http://127.0.0.1:8000/blogs/">BLOG</a></li>
-        <li ><a href="http://127.0.0.1:8000/faqs/">FAQS</a></li> 
+        <li ><a href="http://127.0.0.1:8000/faqs/">FAQS</a></li>
          
+    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTACT <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+       <li><a href="contact_cust.html"> Customer</a></li>
+       <li><a href="contact_dealer.html">Dealer</a></li>
+       <li><a href="contact_seller.html"> Seller</a></li>
+      </ul>
+     <li ><a href="http://127.0.0.1:8000/login/">{{status}}</a></li> 
+    
+    </li>
       </ul>
       </div>
       
@@ -50,13 +64,14 @@
      </div> 
      <div class="col-md-2 col-sm-2">
        <ul class="nav navbar-nav ">
-        <li><a href="#"><span class="glyphicon glyphicon-user" onclick="document.getElementById('id01').style.display='block'"></span> </a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
       </ul>
      </div>
    </div> 
  </div>
 </div>
+
+<!-- Navigation Bar Ends -->
 <div class="container" style="margin-bottom:5%;">
  <div class="row">
   <div class="col-xs-6 col-xs-offset-3">
@@ -64,25 +79,25 @@
 	 <form action="http://127.0.0.1:8000/signup/" method="POST">
 	   <div class="form-group">
 	    <label>Name</label><br>
-		<input type="text" class="form-control" required name="username">
+		<input type="text" class="form-control" placeholder="Name" required name="username">
 	   </div>
 	   <div class="form-group">
 	    <label>Address</label><br>
-		<input type="text" class="form-control" required name="address">
+		<input type="text" class="form-control" placeholder="Address" required name="address">
 	   </div>
 	   <div class="form-group">
 	    <label>Contact</label><br>
-		<input type="text" class="form-control" required name="contact">
+		<input type="text" class="form-control" placeholder="Contact" required name="contact">
 	   </div>
 	   <div class="form-group">
 	     <label>Email</label><br>
-	     <input type="email" class="form-control" required name="email">
+	     <input type="email" class="form-control" placeholder="Email"required name="email">
 	   </div>
 	   <div class="form-group">
 	     <label>Password</label><br>
-	     <input type="password" class="form-control" required name="password">
+	     <input type="password" class="form-control" placeholder="Password"required name="password">
 	   </div>
-	   <button type="submit" class="btn btn-default" >Register</button>
+	   <button type="submit" class="btn btn-success" >Register</button>
 	   
 	 </form>
    </div>
