--- a/templates/otp.html
+++ b/templates/otp.html
@@ -78,10 +78,10 @@
 
 
 
-	 <form action="http://127.0.0.1:8000/otp/" method="POST">
+	 <form action="http://127.0.0.1:8000/otp/em/" method="POST">
 	   <div class="form-group" style="padding-top:5%;">
 	     <label>One Time Password</label><br>
-	     <input type="text" class="form-control" name="OTP" placeholder="4-digit code" required >
+	     <input type="text" class="form-control" name="otp" placeholder="4-digit code" required >
        <input type="hidden" name="email" value={{email}} hidden>
 	   </div>
 	   <button type="submit" class="btn btn-default" >Reset Password</button><br><br>
