--- a/templates/reset_pass.html
+++ b/templates/reset_pass.html
@@ -73,17 +73,23 @@
  <div class="row">
    <div class="col-xs-6 col-xs-offset-3">
      <h3 style="border-bottom:1px solid;padding-top:5%;margin-top:3%;padding-bottom:1%;">Enter Your Email </h3>
-     <h5 style = "color: red;">{{message}}</h5>
+     
 	 
 
 
 
-	 <form action="http://127.0.0.1:8000/forgot_password/" method="POST">
+	 <form action="http://127.0.0.1:8000/reset_password/" method="POST">
 	   <div class="form-group" style="padding-top:5%;">
-	     <label>Email</label><br>
-	     <input type="text" class="form-control" name="email" required >
-	   </div>
-	   <button type="submit" class="btn btn-default" >SEND OTP</button><br><br>
+	     <label>Enter your New_Password</label><br>
+	     <input type="text" class="form-control" name="new_password" required >
+	     <br>
+       <label>Confirm Password</label><br>
+       <input type="text" class="form-control" name="new_password1" required >
+       <h5 style = "color: red;">{{message}}</h5>
+       <input type="hidden" name="email" value={{email}} hidden>
+     </div>
+	   <button type="submit" class="btn btn-default" >Apply Changes</button>
+     <button type="reset" class="btn btn-default" > RESET </button><br><br>
 	   
 	   
 
