--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -70,70 +70,14 @@
  </div>
 </div>
 
-<div class="container">
- <div class="col-xs-6 col-xs-offset-3">
+
+
+<h2 style="color: #707B7C;">&nbsp ABOUT US</h2>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 
- <form action="https://www.instamojo.com/api/1.1/payment-requests/" method="POST">
-
-     <div class="form-group">
-  	  <label>Full Name</label><br>
-  	  <input type="text" class="form-control" name="user" value="{{user}}">
-     </div>
-     <div class="form-group">
-  	  <label>Address</label><br>
-  	  <input type="text" class="form-control" name="address" value="{{address}}">
-     </div>
-     <div class="form-group">
-  	  <label>Landmark</label><br>
-  	  <input type="text" class="form-control" name="landmark">
-     </div>
-     <div class="form-group">
-  	  <label>City</label><br>
-  	  <input type="text" class="form-control" name="city">
-     </div>
-     <div class="row">
-     <div class="form-group col-md-6">
-  	  <label>State</label><br>
-  	  <input type="text" class="form-control" name="state">
-     </div>
-     <div class="form-group col-md-6">
-  	  <label>Pin Code</label><br>
-  	  <input type="text" class="form-control" name="pincode">
-     </div>
-     </div>
-     <div class="row">
-     <div class="form-group col-md-6">
-  	  <label>Email</label><br>
-  	  <input type="email" class="form-control" name="email" value="{{email}}">
-     </div>
-     <div class="form-group col-md-6">
-  	  <label>Contact</label><br>
-  	  <input type="text" class="form-control" name="phone" value="{{phone}}">
-     </div>
-      <input type="hidden" class="form-control" name="id" value="{{id}}">
-      <input type="hidden" class="form-control" name="amount" value="{{amount}}">
-      <input type="hidden" class="form-control" name="purpose" value="{{purpose}}">
-      <input type="hidden" class="form-control" name="redirect_url" value="{{redirect_url}}">
-      <input type="hidden" class="form-control" name="webhook" value="{{webhook}}">
-      <input type="hidden" class="form-control" name="buyername" value="{{user}}">
-      <input type="hidden" class="form-control" name="send_email" value="{{send_email}}">
-      <input type="hidden" class="form-control" name="send_sms" value="{{send_sms}}">
-      <!-- <input type="hidden" class="form-control" name="hash" value="{{hash_o}}"> -->
-
-      <button type="submit" class="btn btn-default">Submit</button>
-     </div>
-
-   </form>
-
-
-
-
-   </div>
-</div>
-
-<div class="container-fluid footer" style="margin-top:3%;">
+<div class="container-fluid footer">
 
      <div class="row">
 
@@ -155,8 +99,10 @@
       <div class="col-md-3"></div>
 
 
-  </div>
-  </div>
+     </div>
+</div>
+
 
 
 </body>
+</html>
