--- a/templates/cart.html
+++ b/templates/cart.html
@@ -21,9 +21,9 @@
   <div class="container-fluid">
     <div class="row">
      <div class="col-md-3 col-sm-12">
-      
-       <a href=#>qwerty</a>
-      
+
+       <a href="http://srb1403.pythonanywhere.com/" style="padding-top:0% ;margin-left: 0px;margin-top: 0%;"><img src="/static/img/logo.png" style="height:75px;width: 200px;padding-top:0% ;margin-left: 50px;margin-top: 0%;"></a>
+
      </div>
      <div class="col-md-7 col-sm-10">
       <nav class="navbar navbar-default ">
@@ -32,41 +32,41 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
       </button>
-      
+
        </div>
        <div class="collapse navbar-collapse" >
       <ul class="nav navbar-nav" id="myNavbar">
-        <li  ><a href="http://127.0.0.1:8000/">HOME</a></li>
-    
+        <li  ><a href="http://srb1403.pythonanywhere.com/">HOME</a></li>
 
-        <li ><a href="http://127.0.0.1:8000/aboutus/">ABOUT</a></li>
-        
-        <li ><a href="http://127.0.0.1:8000/blogs/">BLOG</a></li>
-        <li ><a href="http://127.0.0.1:8000/faqs/">FAQS</a></li>
-         
+
+        <li ><a href="http://srb1403.pythonanywhere.com/aboutus/">ABOUT</a></li>
+
+        <li ><a href="http://srb1403.pythonanywhere.com/blogs/">BLOG</a></li>
+        <li ><a href="http://srb1403.pythonanywhere.com/faqs/">FAQS</a></li>
+
     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTACT <span class="caret"></span></a>
           <ul class="dropdown-menu">
-       <li><a href="contact_cust.html"> Customer</a></li>
-       <li><a href="contact_dealer.html">Dealer</a></li>
-       <li><a href="contact_seller.html"> Seller</a></li>
+       <li><a href="http://srb1403.pythonanywhere.com/contact_cust/"> Customer</a></li>
+       <li><a href="http://srb1403.pythonanywhere.com/contact_dealer/">Dealer</a></li>
+       <li><a href="http://srb1403.pythonanywhere.com/contact_seller/"> Seller</a></li>
       </ul>
-     <li ><a href="http://127.0.0.1:8000/login/">{{status}}</a></li> 
-    
+     <li ><a href="http://srb1403.pythonanywhere.com/login/">{{status}}</a></li>
+
     </li>
       </ul>
       </div>
-      
+
      </div>
       </nav>
-     </div> 
+     </div>
      <div class="col-md-2 col-sm-2">
        <ul class="nav navbar-nav ">
                 <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
       </ul>
      </div>
-   </div> 
+   </div>
  </div>
 </div>
 
@@ -75,7 +75,7 @@
   <h2> Cart</h2>
   <div class="cart-contents table-responsive" style="border:1px solid;">
     <table class="table">
-      <thead>	
+      <thead>
 	    <tr>
 		 <th></th>
 		 <th>Product</th>
@@ -88,7 +88,7 @@
 		</tr>
 	  </thead>
 	  <tbody>
-	   
+
 
     <!-- first row starts -->
    <!--   <tr>
@@ -108,17 +108,17 @@
 		<td> 250</td>
 		<td> <input type="number" id="quantity" class="form-control"  min="1" style="width:50px;" value="1"></td>
 		<td id="total"> </td>
-	   </tr>	 --> 
-     {{data|safe}}  
-       	   
+	   </tr>	 -->
+     {{data|safe}}
+
 	  </tbody>
 	</table>
-  <a href="http://127.0.0.1:8000/">
+  <a href="http://srb1403.pythonanywhere.com/">
 	 <button type="button" class="btn btn-success btn-large" style="margin-left:70%;margin-bottom:2%;">Continue Shopping
 
    </button>
    </a>
-	 
+
   </div>
  <!--<script>
    var x=document.getElementById("price").value;
@@ -136,7 +136,7 @@
 	    <th> Cart Subtotal</th>
 	    <td> {{a_total}}</td>
 	   </tr>
-     
+
 	   <tr>
 	    <th> Shipping Charges</th>
 	    <td>{{s_total}}</td>
@@ -145,15 +145,15 @@
 	    <th> Cart Total</th>
 	    <td> {{g_total}}</td>
 	   </tr>
-	 </tbody> 
+	 </tbody>
 	</table>
    </div>
-   <a href="http://127.0.0.1:8000/checkout/">
+   <a href="http://srb1403.pythonanywhere.com/checkout/">
    <button type="button" class="btn btn-success btn-large" style="margin-top:3%;"> Proceed to checkout</button>
     </a>
  </div>
   <style>
-    .table th, .table td { 
+    .table th, .table td {
         border-top: none !important;
         border-left: none !important;
     }
@@ -167,7 +167,7 @@
 <div class="container-fluid footer" style="margin-top:5%;">
 
      <div class="row">
-	 
+
       <div class="col-md-3" >
        <h3>About</h3>
        <p> One of the Pioneers in the field of ayurveda medicine and in house product</p>
@@ -175,17 +175,17 @@
       <div class="col-md-3">
         <h3>Information</h3>
         <ul >
-         <li style="list-style:none"><a href=# style="text-decoration:none;color:#ffffff;"><span>FAQS</span></a></li>
-         <li style="list-style:none" ><a href=# style="text-decoration:none;color:#ffffff;"><span>BLOGS</span></a></li>
+         <li style="list-style:none"><a href="http://srb1403.pythonanywhere.com/faqs/" style="text-decoration:none;color:#ffffff;"><span>FAQS</span></a></li>
+         <li style="list-style:none" ><a href="http://srb1403.pythonanywhere.com/blogs/" style="text-decoration:none;color:#ffffff;"><span>BLOGS</span></a></li>
         <ul>
       </div>
       <div class="col-md-3">
         <h3>Contact Us</h3>
-        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span>     
+        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span>
       </div>
       <div class="col-md-3"></div>
-	  
-    
+
+
      </div>
 </div>
 </body>
