--- a/templates/faq.html
+++ b/templates/faq.html
@@ -21,9 +21,9 @@
   <div class="container-fluid">
     <div class="row">
      <div class="col-md-3 col-sm-12">
-      
-       <a href=#>qwerty</a>
-      
+
+       <a href="http://srb1403.pythonanywhere.com/" style="padding-top:0% ;margin-left: 0px;margin-top: 0%;"><img src="/static/img/logo.png" style="height:75px;width: 200px;padding-top:0% ;margin-left: 50px;margin-top: 0%;"></a>
+
      </div>
      <div class="col-md-7 col-sm-10">
       <nav class="navbar navbar-default ">
@@ -32,48 +32,48 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
       </button>
-      
+
        </div>
        <div class="collapse navbar-collapse" >
       <ul class="nav navbar-nav" id="myNavbar">
-        <li  ><a href="http://127.0.0.1:8000/">HOME</a></li>
-    
+        <li  ><a href="http://srb1403.pythonanywhere.com/">HOME</a></li>
 
-        <li ><a href="http://127.0.0.1:8000/aboutus/">ABOUT</a></li>
-        
-        <li ><a href="#">BLOG</a></li>
-        <li ><a href="http://127.0.0.1:8000/faqs/">FAQS</a></li>
-         
+
+        <li ><a href="http://srb1403.pythonanywhere.com/aboutus/">ABOUT</a></li>
+
+        <li ><a href="http://srb1403.pythonanywhere.com/blogs/">BLOG</a></li>
+        <li ><a href=#>FAQS</a></li>
+
     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTACT <span class="caret"></span></a>
           <ul class="dropdown-menu">
-       <li><a href="contact_cust.html"> Customer</a></li>
-       <li><a href="contact_dealer.html">Dealer</a></li>
-       <li><a href="contact_seller.html"> Seller</a></li>
+       <li><a href="http://srb1403.pythonanywhere.com/contact_cust/"> Customer</a></li>
+       <li><a href="http://srb1403.pythonanywhere.com/contact_dealer/">Dealer</a></li>
+       <li><a href="http://srb1403.pythonanywhere.com/contact_seller/"> Seller</a></li>
       </ul>
-     <li ><a href="http://127.0.0.1:8000/login/">{{status}}</a></li> 
-    
+     <li ><a href="http://srb1403.pythonanywhere.com/login/">{{status}}</a></li>
+
     </li>
       </ul>
       </div>
-      
+
      </div>
       </nav>
-     </div> 
+     </div>
      <div class="col-md-2 col-sm-2">
        <ul class="nav navbar-nav ">
-                <li><a href="http://127.0.0.1:8000/cart/"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+                <li><a href="http://srb1403.pythonanywhere.com/cart/"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
       </ul>
      </div>
-   </div> 
+   </div>
  </div>
 </div>
 <div class="container" style="margin-top: 3%;">
- <div class="header" style="border-bottom:1px dashed;margin-bottom:5%;"> <h3>Frequently Asked Questions</h3 ></div>   
+ <div class="header" style="border-bottom:1px dashed;margin-bottom:5%;"> <h3>Frequently Asked Questions</h3 ></div>
 
     <div class="panel-group" id="accordion">
-        
+
 
 
         <!-- <div class="panel panel-default">
@@ -84,15 +84,15 @@
             </div>
             <div id="collapse1" class="panel-collapse collapse ">
                 <div class="panel-body">
-                    Account registration at PrepBootstrap is only required if you will be selling or buying themes. 
-                    This ensures a valid communication channel for all parties involved in any transactions. 
+                    Account registration at PrepBootstrap is only required if you will be selling or buying themes.
+                    This ensures a valid communication channel for all parties involved in any transactions.
                 </div>
             </div>
         </div>
 
 
 
-        
+
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
@@ -101,8 +101,8 @@
             </div>
             <div id="collapse2" class="panel-collapse collapse">
                 <div class="panel-body">
-                    A lot of the content of the site has been submitted by the community. Whether it is a commercial element/template/theme 
-                    or a free one, you are encouraged to contribute. All credits are published along with the resources. 
+                    A lot of the content of the site has been submitted by the community. Whether it is a commercial element/template/theme
+                    or a free one, you are encouraged to contribute. All credits are published along with the resources.
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
             </div>
             <div id="collapse6" class="panel-collapse collapse">
                 <div class="panel-body">
-                    The best way to transfer funds is via Paypal. This secure platform ensures timely payments and a secure environment. 
+                    The best way to transfer funds is via Paypal. This secure platform ensures timely payments and a secure environment.
                 </div>
             </div>
         </div>
@@ -177,13 +177,13 @@
             </div>
             <div id="collapse7" class="panel-collapse collapse">
                 <div class="panel-body">
-                    Our standard payment plan provides for monthly payments. At the end of each month, all accumulated funds are transfered to your account. 
-                    The minimum amount of your balance should be at least 70 USD. 
+                    Our standard payment plan provides for monthly payments. At the end of each month, all accumulated funds are transfered to your account.
+                    The minimum amount of your balance should be at least 70 USD.
                 </div>
             </div>
         </div>
 
-        
+
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
@@ -192,10 +192,10 @@
             </div>
             <div id="collapse8" class="panel-collapse collapse">
                 <div class="panel-body">
-                    Buying a theme on <strong>PrepBootstrap</strong> is really simple. Each theme has a live preview. 
+                    Buying a theme on <strong>PrepBootstrap</strong> is really simple. Each theme has a live preview.
                     Once you have selected a theme or template, which is to your liking, you can quickly and securely pay via Paypal.
                     <br />
-                    Once the transaction is complete, you gain full access to the purchased product. 
+                    Once the transaction is complete, you gain full access to the purchased product.
                 </div>
             </div>
         </div>
@@ -226,7 +226,7 @@
         font-family: 'Glyphicons Halflings';
         content: "\e072"; /* "play" icon */
         float: right;
-       
+
         font-size: 18px;
         line-height: 22px;
         /* rotate "play" icon from > (right arrow) to down arrow */
@@ -244,14 +244,14 @@
         -ms-transform: rotate(90deg);
         -o-transform: rotate(90deg);
         transform: rotate(90deg);
-        
+
     }
 </style>
 
   <div class="container-fluid footer" style="margin-top:3%;">
 
      <div class="row">
-	 
+
       <div class="col-md-3" >
        <h3>About</h3>
        <p> One of the Pioneers in the field of ayurveda medicine and in house product</p>
@@ -259,17 +259,17 @@
       <div class="col-md-3">
         <h3>Information</h3>
         <ul >
-         <li style="list-style:none"><a href=# style="text-decoration:none;color:#ffffff;"><span>FAQS</span></a></li>
-         <li style="list-style:none" ><a href=# style="text-decoration:none;color:#ffffff;"><span>BLOGS</span></a></li>
+         <li style="list-style:none"><a href="http://srb1403.pythonanywhere.com/faqs/" style="text-decoration:none;color:#ffffff;"><span>FAQS</span></a></li>
+         <li style="list-style:none" ><a href="http://srb1403.pythonanywhere.com/blogs/" style="text-decoration:none;color:#ffffff;"><span>BLOGS</span></a></li>
         <ul>
       </div>
       <div class="col-md-3">
         <h3>Contact Us</h3>
-        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span>     
+        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span>
       </div>
       <div class="col-md-3"></div>
-	  
-    
+
+
   </div>
   </div>
 </body>
