--- a/templates/index.html
+++ b/templates/index.html
@@ -36,9 +36,9 @@
   <div class="container-fluid">
     <div class="row">
      <div class="col-md-3 col-sm-12">
-      
+
        <a href=# style="padding-top:0% ;margin-left: 0px;margin-top: 0%;"><img src="/static/img/logo.png" style="height:75px;width: 200px;padding-top:0% ;margin-left: 50px;margin-top: 0%;"></a>
-      
+
      </div>
      <div class="col-md-7 col-sm-10">
       <nav class="navbar navbar-default" style="margin-top:2.5%;" >
@@ -47,41 +47,41 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
       </button>
-      
+
        </div>
        <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav" id="myNavbar">
         <li  ><a href="#">HOME</a></li>
-		
 
-        <li ><a href="#">ABOUT</a></li>
-        
-        <li ><a href="http://127.0.0.1:8000/blogs/">BLOG</a></li>
-        <li ><a href="http://127.0.0.1:8000/faqs/">FAQS</a></li>
-         
+
+        <li ><a href="http://srb1403.pythonanywhere.com/aboutus/">ABOUT</a></li>
+
+        <li ><a href="http://srb1403.pythonanywhere.com/blogs/">BLOG</a></li>
+        <li ><a href="http://srb1403.pythonanywhere.com/faqs/">FAQS</a></li>
+
 		<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTACT <span class="caret"></span></a>
           <ul class="dropdown-menu">
-		   <li><a href="contact_cust.html"> Customer</a></li>
-		   <li><a href="contact_dealer.html">Dealer</a></li>
-		   <li><a href="contact_seller.html"> Seller</a></li>
+		   <li><a href="http://srb1403.pythonanywhere.com/contact_cust/"> Customer</a></li>
+		   <li><a href="http://srb1403.pythonanywhere.com/contact_dealer/">Dealer</a></li>
+		   <li><a href="http://srb1403.pythonanywhere.com/contact_seller/"> Seller</a></li>
 		  </ul>
-		 <li ><a href="http://127.0.0.1:8000/login/">{{status}}</a></li> 
-		
+		 <li ><a href="http://srb1403.pythonanywhere.com/login/">{{status}}</a></li>
+
 		</li>
       </ul>
       </div>
-      
+
      </div>
       </nav>
-     </div> 
+     </div>
      <div class="col-md-2 col-sm-2">
        <ul class="nav navbar-nav" style="margin-top:4.5%;">
-                <li><a href="http://127.0.0.1:8000/cart/"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+                <li><a href="http://srb1403.pythonanywhere.com/cart/"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
       </ul>
      </div>
-   </div> 
+   </div>
  </div>
 </div>
 
@@ -100,7 +100,7 @@
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
       <li data-target="#myCarousel" data-slide-to="3"></li>
-      
+
     </ol> -->
 
     <!-- Wrapper for slides -->
@@ -109,24 +109,24 @@
     <!-- wrap start -->
       {{slider|safe}}
        <!-- <div class="item active">
-        
+
         <img src="Banner2.jpg"  >
-        
+
       </div>
 
       <div class="item">
         <img src="Banner2.jpg"  >
-        
+
       </div>
-    
+
       <div class="item">
         <img src="Banner2.jpg"  >
-        
+
       </div>  -->
       <!-- wrap end -->
 
-      
-  
+
+
     </div>
 
     <!-- Left and right controls -->
@@ -149,9 +149,9 @@
 <div class="container" >
  <div class="row " >
    <section>
-<div class="col-xs-4 col-sm-4 col-md-4 text-center about"><img class="image-responsive" src="/static/img/image1.jpg" ></div>
-<div class="col-xs-4 col-sm-4 col-md-4 text-center about"><img class="image-responsive" src="/static/img/image2.jpg" ></div>
-<div class="col-xs-4 col-sm-4 col-md-4 text-center about"><img class="image-responsive" src="/static/img/image3.jpg" ></div>
+<div class="col-xs-4 col-sm-4 col-md-4 text-center about"><img class="image-responsive" style="height:150px;width:150px;" src="/static/img/icon-1.png" ></div>
+<div class="col-xs-4 col-sm-4 col-md-4 text-center about"><img class="image-responsive" style="height:150px;width:150px;" src="/static/img/icon-2.png" ></div>
+<div class="col-xs-4 col-sm-4 col-md-4 text-center about"><img class="image-responsive" style="height:150px;width:150px;" src="/static/img/icon-3.png" ></div>
    </section>
  </div>
 </div>
@@ -163,25 +163,28 @@
 
 
 <div id="product" class="container-fluid ">
-  
+
   <div class="span8">
-    
-    
-    
-   
-     
+      <div class="container">
+    <h2 style="font-family: 'Comfortaa'; margin:3%; font-size:35px;font-weight:bold;border-bottom:1px solid ;"> PICKEL</h2>
+    </div>
+
+
+
+
+
     <div id="Carousel" class="carousel slide" >
-     
-    
-     
+
+
+
     <!-- Carousel items -->
     <div class="carousel-inner">
-        
+
 
       <!-- product row 1 -->
 
 <!--     <div class="item active">
-        
+
         <div class="row-fluid">
           <div class="col-xs-1"></div>
           <div class="col-xs-2"><a href="#x" class="thumbnail"><img src="s3.jpg" alt="Image" style="max-width:100%;"></a>
@@ -194,7 +197,7 @@
                    200
 
                  </div>
-                   
+
 
             </div>
       </div>
@@ -208,7 +211,7 @@
                    200
 
                  </div>
-                   
+
 
             </div>
       </div>
@@ -222,7 +225,7 @@
                    200
 
                  </div>
-                   
+
 
             </div>
       </div>
@@ -236,7 +239,7 @@
                    200
 
                  </div>
-                   
+
 
             </div>
       </div>
@@ -250,20 +253,20 @@
                    200
 
                  </div>
-                   
+
 
             </div>
       </div>
           <div class="col-xs-1"></div>
         </div><!--/row-fluid-->
     <!-- </div> --><!--/item-->
-     
 
 
 
 
 
-<!-- 
+
+<!--
 
     <div class="item">
         <div class="row-fluid">
@@ -279,7 +282,7 @@
                    200
 
                  </div>
-                   
+
 
               </div>
             </div>
@@ -334,7 +337,7 @@
             <div class="col-xs-1"></div>
         </div> --><!--/row-fluid-->
     <!-- </div> --><!--/item-->
-     
+
     <!-- <div class="item">
         <div class="row-fluid">
             <div class="col-xs-1"></div>
@@ -348,7 +351,7 @@
                    200
 
                  </div>
-                   
+
 
               </div>
       </div>
@@ -362,7 +365,7 @@
                    200
 
                  </div>
-                   
+
 
               </div>
       </div>
@@ -376,7 +379,7 @@
                    200
 
                  </div>
-                   
+
 
               </div>
       </div>
@@ -390,7 +393,7 @@
                    200
 
                  </div>
-                   
+
 
               </div>
       </div>
@@ -404,26 +407,26 @@
                    200
 
                  </div>
-                   
+
 
               </div>
       </div>
             <div class="col-xs-1"></div>
         </div> --><!--/row-fluid-->
-    <!-- </div> --><!--/item--> -->
-     
+    <!-- </div> --><!--/item-->
+
     {{pickel|safe}}
 
 
     </div><!--/carousel-inner-->
-     
-    <a class="left carousel-control" href="#Carousel" data-slide="prev"> 
+
+    <a class="left carousel-control" href="#Carousel" data-slide="prev">
   <span class="glyphicon glyphicon-chevron-left static" aria-hidden="true"></span></a>
-    <a class="right carousel-control" href="#Carousel" data-slide="next"> 
+    <a class="right carousel-control" href="#Carousel" data-slide="next">
   <span class="glyphicon glyphicon-chevron-right static" aria-hidden="true"></span></a>
     </div><!--/Carousel-->
-     
-    
+
+
   </div>
 </div>
 
@@ -434,20 +437,22 @@
 <!-- Product Slider 2 starts -->
 
 <div id="product"class="container-fluid">
-  
+
   <div class="span8">
-    
-    
-    
-   
-     
+
+    <div class="container">
+    <h2 style="font-family: 'Comfortaa'; margin:3%; font-size:35px;font-weight:bold;border-bottom:1px solid ;"> AMLA</h2>
+    </div>
+
+
+
     <div id="Carousel1" class="carousel slide">
-     
-    
-     
+
+
+
     <!-- Carousel items -->
     <div class="carousel-inner">
-        
+
      <!-- <div class="item active">
         <div class="row-fluid">
           <div class="col-xs-1"></div>
@@ -461,7 +466,7 @@
                    ₹200
 
                  </div>
-                   
+
 
             </div>
 		  </div>
@@ -488,7 +493,7 @@
                    ₹200
 
                  </div>
-                   
+
 
             </div>
 		  </div>
@@ -502,7 +507,7 @@
                    ₹200
 
                  </div>
-                   
+
 
             </div>
 		  </div>
@@ -516,14 +521,14 @@
                    ₹200
 
                  </div>
-                   
+
 
             </div>
 		  </div>
           <div class="col-xs-1"></div>
         </div> --> <!--/row-fluid-->
      <!-- </div> --> <!--/item-->
-     
+
      <!-- <div class="item">
         <div class="row-fluid">
             <div class="col-xs-1"></div>
@@ -538,7 +543,7 @@
                    ₹200
 
                  </div>
-                   
+
 
               </div>
             </div>
@@ -593,7 +598,7 @@
             <div class="col-xs-1"></div>
         </div> --> <!--/row-fluid-->
      <!-- </div> --> <!--/item-->
-     
+
     <!--  <div class="item">
         <div class="row-fluid">
             <div class="col-xs-1"></div>
@@ -620,7 +625,7 @@
                    ₹200
 
                  </div>
-                   
+
 
               </div>
 			</div>
@@ -634,7 +639,7 @@
                    ₹200
 
                  </div>
-                   
+
 
               </div>
 			</div>
@@ -648,7 +653,7 @@
                    ₹200
 
                  </div>
-                   
+
 
               </div>
 			</div>
@@ -668,20 +673,20 @@
             <div class="col-xs-1"></div>
         </div> --> <!--/row-fluid-->
      <!-- </div> --> <!--/item-->
-     
+
 
     {{amla|safe}}
 
 
     </div><!--/carousel-inner-->
-     
-    <a class="left carousel-control" href="#Carousel1" data-slide="prev"> 
+
+    <a class="left carousel-control" href="#Carousel1" data-slide="prev">
   <span class="glyphicon glyphicon-chevron-left static" aria-hidden="true"></span></a>
-    <a class="right carousel-control" href="#Carousel1" data-slide="next"> 
+    <a class="right carousel-control" href="#Carousel1" data-slide="next">
   <span class="glyphicon glyphicon-chevron-right static" aria-hidden="true"></span></a>
     </div><!--/Carousel-->
-     
-    
+
+
   </div>
 </div>
 
@@ -706,7 +711,7 @@
   <div class="container-fluid footer">
 
      <div class="row">
-	 
+
       <div class="col-md-3" >
        <h3>About</h3>
        <p> One of the Pioneers in the field of ayurveda medicine and in house product</p>
@@ -714,21 +719,21 @@
       <div class="col-md-3">
         <h3>Information</h3>
         <ul >
-         <li style="list-style:none"><a href=# style="text-decoration:none;color:#ffffff;"><span>FAQS</span></a></li>
-         <li style="list-style:none" ><a href=# style="text-decoration:none;color:#ffffff;"><span>BLOGS</span></a></li>
+         <li style="list-style:none"><a href="http://srb1403.pythonanywhere.com/faqs/" style="text-decoration:none;color:#ffffff;"><span>FAQS</span></a></li>
+         <li style="list-style:none" ><a href="http://srb1403.pythonanywhere.com/blogs/" style="text-decoration:none;color:#ffffff;"><span>BLOGS</span></a></li>
         <ul>
       </div>
       <div class="col-md-3">
         <h3>Contact Us</h3>
-        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span>     
+        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span>
       </div>
       <div class="col-md-3"></div>
-	  
-    
+
+
   </div>
   </div>
-  
+
   <!-- footer ends -->
-  
+
  </body>
  </html>
