--- a/templates/otp.html
+++ b/templates/otp.html
@@ -21,9 +21,9 @@
   <div class="container-fluid">
     <div class="row">
      <div class="col-md-3 col-sm-12">
-      
-       <a href=#>qwerty</a>
-      
+
+       <a href="http://srb1403.pythonanywhere.com/" style="padding-top:0% ;margin-left: 0px;margin-top: 0%;"><img src="/static/img/logo.png" style="height:75px;width: 200px;padding-top:0% ;margin-left: 50px;margin-top: 0%;"></a>
+
      </div>
      <div class="col-md-7 col-sm-10">
       <nav class="navbar navbar-default ">
@@ -32,41 +32,41 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
       </button>
-      
+
        </div>
        <div class="collapse navbar-collapse" >
       <ul class="nav navbar-nav" id="myNavbar">
-        <li  ><a href="http://127.0.0.1:8000/">HOME</a></li>
-    
+        <li  ><a href="http://srb1403.pythonanywhere.com/">HOME</a></li>
 
-        <li ><a href="http://127.0.0.1:8000/aboutus/">ABOUT</a></li>
-        
-        <li ><a href="#">BLOG</a></li>
-        <li ><a href="http://127.0.0.1:8000/faqs/">FAQS</a></li>
-         
+
+        <li ><a href="http://srb1403.pythonanywhere.com/aboutus/">ABOUT</a></li>
+
+        <li ><a href="http://srb1403.pythonanywhere.com/blogs/">BLOG</a></li>
+        <li ><a href="http://srb1403.pythonanywhere.com/faqs/">FAQS</a></li>
+
     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTACT <span class="caret"></span></a>
           <ul class="dropdown-menu">
-       <li><a href="contact_cust.html"> Customer</a></li>
-       <li><a href="contact_dealer.html">Dealer</a></li>
-       <li><a href="contact_seller.html"> Seller</a></li>
+       <li><a href="http://srb1403.pythonanywhere.com/contact_cust/"> Customer</a></li>
+       <li><a href="http://srb1403.pythonanywhere.com/contact_dealer/">Dealer</a></li>
+       <li><a href="http://srb1403.pythonanywhere.com/contact_seller/"> Seller</a></li>
       </ul>
-     <li ><a href="http://127.0.0.1:8000/login/">{{status}}</a></li> 
-    
+     <li ><a href="http://srb1403.pythonanywhere.com/login/">{{status}}</a></li>
+
     </li>
       </ul>
       </div>
-      
+
      </div>
       </nav>
-     </div> 
+     </div>
      <div class="col-md-2 col-sm-2">
        <ul class="nav navbar-nav ">
-                <li><a href="http://127.0.0.1:8000/cart/"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+                <li><a href="http://srb1403.pythonanywhere.com/cart/"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
       </ul>
      </div>
-   </div> 
+   </div>
  </div>
 </div>
 <div class="container" style="margin-bottom:5%;">
@@ -74,34 +74,34 @@
    <div class="col-xs-6 col-xs-offset-3">
      <h3 style="border-bottom:1px solid;padding-top:5%;margin-top:3%;padding-bottom:1%;">Enter Your OTP </h3>
      <h5 style = "color: red;">{{message}}</h5>
-	 
 
 
 
-	 <form action="http://127.0.0.1:8000/otp/em/" method="POST">
+
+	 <form action="http://srb1403.pythonanywhere.com/otp/em/" method="POST">
 	   <div class="form-group" style="padding-top:5%;">
 	     <label>One Time Password</label><br>
 	     <input type="text" class="form-control" name="otp" placeholder="4-digit code" required >
        <input type="hidden" name="email" value={{email}} hidden>
 	   </div>
 	   <button type="submit" class="btn btn-default" >Reset Password</button><br><br>
-	   
-	   
+
+
 
 
 
 
 	 </form>
-	 
+
    </div>
-   
+
    </div>
- 
+
  </div>
 <div class="container-fluid footer">
 
      <div class="row">
-	 
+
       <div class="col-md-3" >
        <h3>About</h3>
        <p> One of the Pioneers in the field of ayurveda medicine and in house product</p>
@@ -109,17 +109,17 @@
       <div class="col-md-3">
         <h3>Information</h3>
         <ul >
-         <li style="list-style:none"><a href=# style="text-decoration:none;color:#ffffff;"><span>FAQS</span></a></li>
-         <li style="list-style:none" ><a href=# style="text-decoration:none;color:#ffffff;"><span>BLOGS</span></a></li>
+         <li style="list-style:none"><a href="http://srb1403.pythonanywhere.com/faqs/" style="text-decoration:none;color:#ffffff;"><span>FAQS</span></a></li>
+         <li style="list-style:none" ><a href="http://srb1403.pythonanywhere.com/blogs/" style="text-decoration:none;color:#ffffff;"><span>BLOGS</span></a></li>
         <ul>
       </div>
       <div class="col-md-3">
         <h3>Contact Us</h3>
-        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span>     
+        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span>
       </div>
       <div class="col-md-3"></div>
-	  
-    
+
+
      </div>
 </div>
 
