--- a/templates/product.html
+++ b/templates/product.html
@@ -22,9 +22,9 @@
   <div class="container-fluid">
     <div class="row">
      <div class="col-md-3 col-sm-12">
-      
-       <a href=#>qwerty</a>
-      
+
+       <a href="http://srb1403.pythonanywhere.com/" style="padding-top:0% ;margin-left: 0px;margin-top: 0%;"><img src="/static/img/logo.png" style="height:75px;width: 200px;padding-top:0% ;margin-left: 50px;margin-top: 0%;"></a>
+
      </div>
      <div class="col-md-7 col-sm-10">
       <nav class="navbar navbar-default ">
@@ -33,41 +33,41 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
       </button>
-      
+
        </div>
        <div class="collapse navbar-collapse" >
       <ul class="nav navbar-nav" id="myNavbar">
-        <li  ><a href="http://127.0.0.1:8000/">HOME</a></li>
-    
+        <li  ><a href="http://srb1403.pythonanywhere.com/">HOME</a></li>
 
-        <li ><a href="#">ABOUT</a></li>
-        
-        <li ><a href="http://127.0.0.1:8000/blogs/">BLOG</a></li>
-        <li ><a href="http://127.0.0.1:8000/faqs/">FAQS</a></li>
-         
+
+        <li ><a href="http://srb1403.pythonanywhere.com/aboutus/">ABOUT</a></li>
+
+        <li ><a href="http://srb1403.pythonanywhere.com/blogs/">BLOG</a></li>
+        <li ><a href="http://srb1403.pythonanywhere.com/faqs/">FAQS</a></li>
+
     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTACT <span class="caret"></span></a>
           <ul class="dropdown-menu">
-       <li><a href="contact_cust.html"> Customer</a></li>
-       <li><a href="contact_dealer.html">Dealer</a></li>
-       <li><a href="contact_seller.html"> Seller</a></li>
+       <li><a href="http://srb1403.pythonanywhere.com/contact_cust/"> Customer</a></li>
+       <li><a href="http://srb1403.pythonanywhere.com/contact_dealer/">Dealer</a></li>
+       <li><a href="http://srb1403.pythonanywhere.com/contact_seller/"> Seller</a></li>
       </ul>
-     <li ><a href="http://127.0.0.1:8000/login/">{{status}}</a></li> 
-    
+     <li ><a href="http://srb1403.pythonanywhere.com/login/">{{status}}</a></li>
+
     </li>
       </ul>
       </div>
-      
+
      </div>
       </nav>
-     </div> 
+     </div>
      <div class="col-md-2 col-sm-2">
        <ul class="nav navbar-nav ">
-                <li><a href="http://127.0.0.1:8000/cart/"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+                <li><a href="http://srb1403.pythonanywhere.com/cart/"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
       </ul>
      </div>
-   </div> 
+   </div>
  </div>
 </div>
 
@@ -107,22 +107,22 @@
    <div class="product-price" style="margin-top:2%;margin-bottom:5%;border-bottom:1px dashed;">
      <div class="prod" style="margin-top:5%;margin-bottom:2%;border-top:1px solid;border-bottom:1px solid; width:20%;">
         <!-- <p style="font-size:19px;"> {{price}}</p> -->
-        <p> 
-            <span style="text-decoration:line-through;color:grey;margin:2%;font-size:19px">₹{{price}}</span> 
-            <span style="color:red;margin-left:0.1%;margin-right:4%;font-size:14px">{{offer}}% off</span> 
-            <span style="font-weight:bold; font-size:19px;margin:2%;">₹{{amount}}</span> 
+        <p>
+            <span style="text-decoration:line-through;color:grey;margin:2%;font-size:19px">₹{{price}}</span>
+            <span style="color:red;margin-left:0.1%;margin-right:4%;font-size:14px">{{offer}}% off</span>
+            <span style="font-weight:bold; font-size:19px;margin:2%;">₹{{amount}}</span>
          </p>
      </div>
-     <span style="font-weight:bold; font-size:15px; color:#46662D">The Product is {{avail}}</span> 
+     <span style="font-weight:bold; font-size:15px; color:{{avail_color}}">The Product is {{avail}}</span>
    </div>
    <div style="width:15%;">
      <form class="cart" action="/addcart/{{prod_id}}/" method="POST">
 		 <div class="row">
 		 <div class="col-xs-8">
 		  <input type="number" class="form-control" value="1" min="1" name="qty">
-	 
-	       
-	    
+
+
+
 	     </div>
 		 <div class="col-xs-3">
 		 <button type="submit" class="btn btn-success" style="background:#2d3738;" > Add to Cart</button>
@@ -171,7 +171,7 @@
 <div class="container-fluid footer">
 
      <div class="row">
-	 
+
       <div class="col-md-3" >
        <h3>About</h3>
        <p> One of the Pioneers in the field of ayurveda medicine and in house product</p>
@@ -179,17 +179,17 @@
       <div class="col-md-3">
         <h3>Information</h3>
         <ul >
-         <li style="list-style:none"><a href=# style="text-decoration:none;color:#ffffff;"><span>FAQS</span></a></li>
-         <li style="list-style:none" ><a href=# style="text-decoration:none;color:#ffffff;"><span>BLOGS</span></a></li>
+         <li style="list-style:none"><a href="http://srb1403.pythonanywhere.com/faqs/" style="text-decoration:none;color:#ffffff;"><span>FAQS</span></a></li>
+         <li style="list-style:none" ><a href="http://srb1403.pythonanywhere.com/blogs/" style="text-decoration:none;color:#ffffff;"><span>BLOGS</span></a></li>
         <ul>
       </div>
       <div class="col-md-3">
         <h3>Contact Us</h3>
-        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span>     
+        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span>
       </div>
       <div class="col-md-3"></div>
-	  
-    
+
+
   </div>
   </div>
 
