--- a/static/css/main.css
+++ b/static/css/main.css
@@ -47,7 +47,7 @@ html,body{
 	font-size:20px;
 }
 .nav>li> a:hover{
-	background-color:#7AD688; //background-color
+	background-color:#9CC603; //background-color
 }
 .glyphicon{
 	font-size:30px;
