--- a/templates/cart.html
+++ b/templates/cart.html
@@ -45,16 +45,10 @@
 
         <li ><a href="http://srb1403.pythonanywhere.com/blogs/">BLOG</a></li>
         <li ><a href="http://srb1403.pythonanywhere.com/faqs/">FAQS</a></li>
+        <li> <a href="http://srb1403.pythonanywhere.com/contact_cust/"> CONTACT</a></li>
+        <li ><a href="http://srb1403.pythonanywhere.com/login/">{{status}}</a></li>
 
-    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTACT <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-       <li><a href="http://srb1403.pythonanywhere.com/contact_cust/"> Customer</a></li>
-       <li><a href="http://srb1403.pythonanywhere.com/contact_dealer/">Dealer</a></li>
-       <li><a href="http://srb1403.pythonanywhere.com/contact_seller/"> Seller</a></li>
-      </ul>
-     <li ><a href="http://srb1403.pythonanywhere.com/login/">{{status}}</a></li>
 
-    </li>
       </ul>
       </div>
 
@@ -164,7 +158,7 @@
 </style>
 
 </div>
-<div class="container-fluid footer" style="margin-top:5%;">
+<div class="container-fluid footer">
 
      <div class="row">
 
@@ -172,21 +166,22 @@
        <h3>About</h3>
        <p> One of the Pioneers in the field of ayurveda medicine and in house product</p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4 col-md-offset-1">
         <h3>Information</h3>
-        <ul >
-         <li style="list-style:none"><a href="http://srb1403.pythonanywhere.com/faqs/" style="text-decoration:none;color:#ffffff;"><span>FAQS</span></a></li>
-         <li style="list-style:none" ><a href="http://srb1403.pythonanywhere.com/blogs/" style="text-decoration:none;color:#ffffff;"><span>BLOGS</span></a></li>
-        <ul>
+         <li style="list-style:none"><a href=# style="text-decoration:none;color:#ffffff;">Shipping Policy</a></li>
+         <li style="list-style:none"><a href="http://srb1403.pythonanywhere.com/faqs/" style="text-decoration:none;color:#ffffff;">Frequently Asked Questions</a></li>
+         <li style="list-style:none" ><a href="http://srb1403.pythonanywhere.com/blogs/" style="text-decoration:none;color:#ffffff;">Blogs</a></li>
+
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <h3>Contact Us</h3>
-        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span>
+        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span> <br><br>
+        <a href="http://srb1403.pythonanywhere.com/contact_cust/"><button type="button" class="btn btn-default">CONTACT</button></a>
       </div>
-      <div class="col-md-3"></div>
 
 
-     </div>
-</div>
+
+  </div>
+  </div>
 </body>
 </html>
