--- a/templates/contact_cust.html
+++ b/templates/contact_cust.html
@@ -45,16 +45,10 @@
 
         <li ><a href="http://srb1403.pythonanywhere.com/blogs/">BLOG</a></li>
         <li ><a href="http://srb1403.pythonanywhere.com/faqs/">FAQS</a></li>
+        <li> <a href="http://srb1403.pythonanywhere.com/contact_cust/"> CONTACT</a></li>
+        <li ><a href="http://srb1403.pythonanywhere.com/login/">{{status}}</a></li>
 
-    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTACT <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-       <li><a href=#> Customer</a></li>
-       <li><a href="http://srb1403.pythonanywhere.com/contact_dealer/">Dealer</a></li>
-       <li><a href="http://srb1403.pythonanywhere.com/contact_seller/"> Seller</a></li>
-      </ul>
-     <li ><a href="http://srb1403.pythonanywhere.com/login/">{{status}}</a></li>
 
-    </li>
       </ul>
       </div>
 
@@ -72,7 +66,7 @@
 
 <div class="container-fluid" style="width:100%;padding:0;margin:0;">
   <div class="col-xs-12" style="width:100%;padding:0;margin:0;">
-     <img src="banner_h112.jpg" style="width:100%;padding:0;margin:0;">
+     <img src="/static/img/banner_h112.jpg" style="width:100%;padding:0;margin:0;">
   </div>
 </div>
 
@@ -80,11 +74,45 @@
 <div class="container" style="border-bottom:1px dashed ;padding:5%;margin-bottom:5%;">
 <h2 style="border-bottom:1px dashed ;"> Contact Us</h2>
  <div class="row">
+
   <div class="col-xs-6">
-     <div class="map"></div>
-	 <section>
-	   <strong>
-	 </section>
+     <div id="map" style="width:500px; height:300px; margin-top:5%;"></div>
+    <script>
+
+      function initMap() {
+        var myLatLng = {lat: 21.2491, lng:  81.6050};
+
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 12,
+          center: myLatLng
+        });
+
+        var marker = new google.maps.Marker({
+          position: myLatLng,
+          map: map,
+          title: 'NIT RAIPUR'
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3z4wUCCh9CXfwSk1rXvv6qwQG7XWtDlI&callback=initMap">
+    </script>
+	<div id="address">
+	  <div id="line 1">
+	    <h3 style="font-weight:bold;font-family: 'Comfortaa', cursive;"> MEDIFUDO </h3>
+		<p style="font-size:17px;"> GE road, NIT Raipur</p>
+	  </div>
+	  <div id="line 2">
+	    <h3 style="font-weight:bold;font-family: 'Comfortaa', cursive;"> TOLL FREE NO. </h3>
+		<p style="font-size:17px;"> 1800-4548-48484</p>
+	  </div>
+	  <div id="line 3">
+	    <h3 style="font-weight:bold;font-family: 'Comfortaa', cursive;"> CUSTOMER SERVICE HOURS </h3>
+		<p style="font-size:17px;"> MONDAY-FRIDAY 9.30 AM – 7.30 PM IST</p>
+	  </div>
+
+	</div>
+
   </div>
   <div class="col-xs-6">
    <h3>Contact Form</h3>
@@ -120,18 +148,19 @@
        <h3>About</h3>
        <p> One of the Pioneers in the field of ayurveda medicine and in house product</p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4 col-md-offset-1">
         <h3>Information</h3>
-        <ul >
-         <li style="list-style:none"><a href="http://srb1403.pythonanywhere.com/faqs/" style="text-decoration:none;color:#ffffff;"><span>FAQS</span></a></li>
-         <li style="list-style:none" ><a href="http://srb1403.pythonanywhere.com/blogs/" style="text-decoration:none;color:#ffffff;"><span>BLOGS</span></a></li>
-        <ul>
+         <li style="list-style:none"><a href=# style="text-decoration:none;color:#ffffff;">Shipping Policy</a></li>
+         <li style="list-style:none"><a href="http://srb1403.pythonanywhere.com/faqs/" style="text-decoration:none;color:#ffffff;">Frequently Asked Questions</a></li>
+         <li style="list-style:none" ><a href="http://srb1403.pythonanywhere.com/blogs/" style="text-decoration:none;color:#ffffff;">Blogs</a></li>
+
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <h3>Contact Us</h3>
-        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span>
+        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span> <br><br>
+        <a href="http://srb1403.pythonanywhere.com/contact_cust/"><button type="button" class="btn btn-default">CONTACT</button></a>
       </div>
-      <div class="col-md-3"></div>
+
 
 
   </div>
