--- a/templates/product.html
+++ b/templates/product.html
@@ -138,7 +138,8 @@
    </tr>
  </thead>
  <tbody>
-  <tr>
+  
+  <!-- <tr>
     <td>Nutrient 1</td>
 	<td>{{nutrient_1}}</td>
   </tr>
@@ -157,7 +158,9 @@
   <tr>
     <td>Nutrient 5</td>
 	<td>{{nutrient_5}}</td>
-  </tr>
+  </tr> -->
+  {{nut|safe}}
+ 
  </tbody>
 </table>
 </div>
