changes in nut1

--- a/templates/product.html
+++ b/templates/product.html
@@ -161,6 +161,26 @@
   </tr> -->
   {{nut|safe}}
  
+  <!-- <tr>
+    <td>Nutrient 1</td>
+  <td>{{nutrient_1}}</td>
+  </tr>
+  <tr>
+    <td>Nutrient 2</td>
+  <td>{{nutrient_2}}</td>
+  </tr>
+  <tr>
+    <td>Nutrient 3</td>
+  <td>{{nutrient_3}}</td>
+  </tr>
+  <tr>
+    <td>Nutrient 4</td>
+  <td>{{nutrient_4}}</td>
+  </tr>
+  <tr>
+    <td>Nutrient 5</td>
+  <td>{{nutrient_5}}</td>
+  </tr> -->
  </tbody>
 </table>
 </div>
