--- a/templates/cart.html
+++ b/templates/cart.html
@@ -127,17 +127,17 @@
 	 <tbody>
 
 	   <tr>
-	    <th> Cart Subtotal</th>
+	    <th> Cart Total</th>
 	    <td> {{a_total}}</td>
 	   </tr>
 
 	   <tr>
-	    <th> Shipping Charges</th>
-	    <td>{{s_total}}</td>
+	    <th></th>
+	    <td></td>
 	   </tr>
 	   <tr>
-	    <th> Cart Total</th>
-	    <td> {{g_total}}</td>
+	    <th><div style="color:red;">*Shipping Charges applicable as per your location</div></div></th>
+	    <td></td>
 	   </tr>
 	 </tbody>
 	</table>
