--- a/templates/index.html
+++ b/templates/index.html
@@ -720,7 +720,8 @@
       </div>
       <div class="col-md-4">
         <h3>Contact Us</h3>
-        <span>Elex gallery ,Floor no.-2,Elex Department,NIT Raipur,Chhattisgarh</span> <br><br>
+        <span>Shop No-04, Near Sundar Nagar, Post Office, Sundar Nagar, Raipur-492003(C.G)</span><br>
+        <span>Customer Care: +91 89660-40309</span><br><br>
         <a href="http://srb1403.pythonanywhere.com/contact_cust/"><button type="button" class="btn btn-default">CONTACT</button></a>
       </div>
 
