--- a/templates/login.html
+++ b/templates/login.html
@@ -77,6 +77,7 @@
 	     <label>Password</label><br>
 	     <input type="password" class="form-control" name="password" placeholder="Password" required >
 	   </div>
+	   <div style="color:red;">{{message|safe}}</div><br>
 	   <button type="submit" class="btn btn-default" >Login</button>
      <a href="http://srb1403.pythonanywhere.com/signup/">
      <button type="button" href="http://srb1403.pythonanywhere.com/signup/" class="btn btn-default" style="margin-left: 1.5%">Sign Up</button><br><br>
